<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_back"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/primaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/golar"
        android:textColor="@color/whiteText"
        android:textSize="38sp"
        app:fontFamily="@font/damion" />

    <TextView
        android:id="@+id/secondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/find_your_home_here"
        android:textColor="@color/orangeText"
        android:textSize="18sp"
        android:textFontWeight="600"
        app:fontFamily="@font/dinpro" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="john doe"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"

        android:selectAllOnFocus="true"
        android:textColor="@color/faintWhite"
        android:textColorHint="@color/whiteText"
        android:textSize="16sp"
        app:backgroundTint="@color/whiteText"
        app:fontFamily="@font/dinpro" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="12@hello"
        android:hint="@string/prompt_password"

        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/faintWhite"
        android:textColorHint="@color/whiteText"
        android:textSize="16sp"
        app:backgroundTint="@color/whiteText"
        app:fontFamily="@font/dinpro" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/remember_me"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="64dp"
            android:background="@null"
            android:enabled="false"
            android:text="@string/remember_me"
            android:textAllCaps="false"
            android:textColor="@color/orangeText"
            android:textFontWeight="600"
            android:textSize="17sp"
            android:layout_alignParentStart="true"
            app:fontFamily="@font/dinpro"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/forgot_password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="64dp"
            android:background="@null"
            android:enabled="false"
            android:text="@string/forgot_password"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textColor="@color/orangeText"
            android:textFontWeight="600"
            android:textSize="17sp"
            android:layout_alignParentEnd="true"
            app:fontFamily="@font/dinpro"
            android:layout_alignParentRight="true" />

    </RelativeLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/round_button"
        android:enabled="false"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/whiteText"
        android:textFontWeight="600"
        android:textSize="17sp"
        app:fontFamily="@font/dinpro" />

    <Button
        android:id="@+id/lnk_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="64dp"
        android:background="@null"
        android:enabled="false"
        android:text="@string/not_a_member_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/orangeText"
        android:textFontWeight="600"
        android:textSize="17sp"
        app:fontFamily="@font/dinpro" />

</LinearLayout>